# TruthSeeker

./: .env.example  .gitignore  ANALYSIS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  streamlit_ui.py  upgrade_all.sh  web_search_agent.py
models/: deps.py  search_result.py
src/truthseeker/: __init__.py  http.py  models.py
src/truthseeker/application/: __init__.py  fact_checker.py
src/truthseeker/config/: __init__.py  settings.py
src/truthseeker/domain/: __init__.py  models.py
src/truthseeker/infrastructure/: __init__.py
src/truthseeker/infrastructure/http/: __init__.py  client.py
src/truthseeker/infrastructure/llm/: __init__.py  client.py  parser.py
src/truthseeker/infrastructure/search/: __init__.py  brave_client.py
src/truthseeker/interfaces/: __init__.py
src/truthseeker/interfaces/cli/: __init__.py  cli.py
src/truthseeker/interfaces/streamlit/: __init__.py  app.py  components.py  formatters.py
src/truthseeker/llm/: __init__.py  parser.py
src/truthseeker/search/: __init__.py  client.py
src/truthseeker/utils/: __init__.py  pdf.py  sanitization.py
tools/: web_search.py
utils/: ai_client_loader.py  generate_pdf.py  sanitization.py  shared_utils.py
