[project]
name = "truthseeker"
version = "0.1.0"
description = "AI-powered fact checker - refactored package layout"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.3.0",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.4.3",
    "rich>=13.9.4",
    "streamlit>=1.40.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "pre-commit"]

[tool.ruff]
line-length = 88
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = 3.13
strict = true

[tool.isort]
profile = "black"

[project.scripts]
truthseeker = "truthseeker.interfaces.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
